--- a/build.gradle
+++ b/build.gradle
@@ -72,3 +72,7 @@ configurations {
 compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
+
+clean {
+    delete file(querydslDir)
+}
